feat: add AI settings page and integrate AI account management
- Introduced a new AI settings page for managing AI accounts and configurations.
- Updated the sidebar to include a link to the new AI settings page.
- Implemented API functions for fetching, adding, deleting, and setting default AI accounts.
- Enhanced the Podcast Notes page to handle transcription and summarization with AI accounts.
- Added UI components for selecting accounts and models for transcription and summarization.
- Included translations for new UI elements related to AI settings and account management.
- Updated styles for better layout and user experience in the AI settings and Podcast Notes pages.

--- a/internal/core/i18n/locales/de.yml
+++ b/internal/core/i18n/locales/de.yml
@@ -167,6 +167,21 @@ ui:
   # AI
   ai: "KI"
   ai_podcast_notes: "Podcast-Notizen"
+  ai_settings: "KI-Einstellungen"
+  ai_no_accounts: "Keine KI-Konten konfiguriert. Fügen Sie eines hinzu, um Transkription und Zusammenfassung zu nutzen."
+  ai_encryption_note: "API-Schlüssel werden mit Ihrer PIN mittels AES-256-GCM verschlüsselt. Lassen Sie die PIN leer für Klartext."
+  ai_account_name: "Kontoname"
+  ai_provider: "Anbieter"
+  ai_api_key: "API-Schlüssel"
+  ai_same_key_for_summary: "Gleicher Schlüssel für Zusammenfassung"
+  ai_summary_api_key: "Zusammenfassung API-Schlüssel"
+  ai_pin: "4-stellige PIN"
+  ai_pin_hint: "Optional. Wird zur Verschlüsselung Ihrer API-Schlüssel verwendet"
+  ai_advanced_options: "Erweiterte Optionen"
+  ai_transcription_model: "Transkriptionsmodell"
+  ai_transcription_url: "Transkriptions-URL"
+  ai_summary_model: "Zusammenfassungsmodell"
+  ai_summary_url: "Zusammenfassungs-URL"
 
 # Server-Nachrichten
 server:
