--- a/internal/core/i18n/locales/jp.yml
+++ b/internal/core/i18n/locales/jp.yml
@@ -167,6 +167,21 @@ ui:
   # AI
   ai: "AI"
   ai_podcast_notes: "ポッドキャストノート"
+  ai_settings: "AI設定"
+  ai_no_accounts: "AIアカウントが設定されていません。文字起こしと要約機能を使用するには追加してください。"
+  ai_encryption_note: "APIキーはPINを使用してAES-256-GCMで暗号化されます。空のPINで平文保存。"
+  ai_account_name: "アカウント名"
+  ai_provider: "プロバイダー"
+  ai_api_key: "APIキー"
+  ai_same_key_for_summary: "要約に同じキーを使用"
+  ai_summary_api_key: "要約用APIキー"
+  ai_pin: "4桁のPIN"
+  ai_pin_hint: "オプション。APIキーの暗号化に使用"
+  ai_advanced_options: "詳細オプション"
+  ai_transcription_model: "文字起こしモデル"
+  ai_transcription_url: "文字起こしURL"
+  ai_summary_model: "要約モデル"
+  ai_summary_url: "要約URL"
 
 # サーバーメッセージ
 server:
