--- a/internal/core/i18n/locales/en.yml
+++ b/internal/core/i18n/locales/en.yml
@@ -179,6 +179,21 @@ ui:
   # AI
   ai: "AI"
   ai_podcast_notes: "Podcast Notes"
+  ai_settings: "AI Settings"
+  ai_no_accounts: "No AI accounts configured. Add one to use transcription and summarization."
+  ai_encryption_note: "API keys are encrypted with your PIN using AES-256-GCM. Leave PIN empty to store keys in plain text."
+  ai_account_name: "Account Name"
+  ai_provider: "Provider"
+  ai_api_key: "API Key"
+  ai_same_key_for_summary: "Same Key for Summary"
+  ai_summary_api_key: "Summary API Key"
+  ai_pin: "4-Digit PIN"
+  ai_pin_hint: "Optional. Used to encrypt your API keys"
+  ai_advanced_options: "Advanced Options"
+  ai_transcription_model: "Transcription Model"
+  ai_transcription_url: "Transcription URL"
+  ai_summary_model: "Summary Model"
+  ai_summary_url: "Summary URL"
 
 # Server messages
 server:
