--- a/internal/core/i18n/locales/fr.yml
+++ b/internal/core/i18n/locales/fr.yml
@@ -167,6 +167,21 @@ ui:
   # AI
   ai: "IA"
   ai_podcast_notes: "Notes de Podcast"
+  ai_settings: "Paramètres IA"
+  ai_no_accounts: "Aucun compte IA configuré. Ajoutez-en un pour utiliser la transcription et le résumé."
+  ai_encryption_note: "Les clés API sont chiffrées avec votre PIN en AES-256-GCM. Laissez le PIN vide pour stocker en clair."
+  ai_account_name: "Nom du compte"
+  ai_provider: "Fournisseur"
+  ai_api_key: "Clé API"
+  ai_same_key_for_summary: "Même clé pour le résumé"
+  ai_summary_api_key: "Clé API de résumé"
+  ai_pin: "PIN à 4 chiffres"
+  ai_pin_hint: "Optionnel. Utilisé pour chiffrer vos clés API"
+  ai_advanced_options: "Options avancées"
+  ai_transcription_model: "Modèle de transcription"
+  ai_transcription_url: "URL de transcription"
+  ai_summary_model: "Modèle de résumé"
+  ai_summary_url: "URL de résumé"
 
 # Messages du serveur
 server:
