--- a/internal/core/i18n/locales/zh.yml
+++ b/internal/core/i18n/locales/zh.yml
@@ -182,7 +182,7 @@ ui:
   ai_settings: "AI 设置"
   ai_no_accounts: "未配置 AI 账户。添加一个以使用转录和摘要功能。"
   ai_encryption_note: "API 密钥使用 AES-256-GCM 加密。留空 PIN 则以明文存储密钥。"
-  ai_account_name: "账户名称"
+  ai_account_name: "选择账户"
   ai_provider: "服务商"
   ai_api_key: "API 密钥"
   ai_same_key_for_summary: "摘要使用相同密钥"
