feat: add new UI translations for AI outputs and processing prompts in multiple languages

--- a/internal/core/i18n/locales/de.yml
+++ b/internal/core/i18n/locales/de.yml
@@ -190,6 +190,8 @@ ui:
   ai_select_model: "KI und Modell auswählen"
   ai_select_file_hint: "Datei auswählen, um zu starten"
   ai_outputs: "Ausgaben"
+  ai_no_outputs_yet: "Noch keine Ausgaben. Verarbeitung starten, um Transkript und Zusammenfassung zu erstellen."
+  ai_select_file_for_outputs: "Datei auswählen, um Ausgaben anzuzeigen."
 
 # Server-Nachrichten
 server:
