--- a/internal/core/i18n/locales/es.yml
+++ b/internal/core/i18n/locales/es.yml
@@ -192,6 +192,20 @@ ui:
   ai_outputs: "Resultados"
   ai_no_outputs_yet: "Sin resultados aún. Inicia el procesamiento para generar transcripción y resumen."
   ai_select_file_for_outputs: "Selecciona un archivo para ver los resultados."
+  # Nombres de pasos AI
+  ai_step_extract_audio: "Extraer audio"
+  ai_step_compress_audio: "Comprimir audio"
+  ai_step_chunk_audio: "Dividir audio"
+  ai_step_transcribe: "Transcribir"
+  ai_step_merge: "Combinar fragmentos"
+  ai_step_summarize: "Generar resumen"
+  # Detalles de pasos AI
+  ai_detail_already_audio: "Ya es audio"
+  ai_detail_audio_ready: "Audio listo"
+  ai_detail_file_small_enough: "Archivo suficientemente pequeño"
+  ai_detail_transcription_complete: "Transcripción completa"
+  ai_detail_no_chunks_to_merge: "Sin fragmentos para combinar"
+  ai_detail_summary_generated: "Resumen generado"
 
 # Mensajes del servidor
 server:
