--- a/internal/core/i18n/locales/jp.yml
+++ b/internal/core/i18n/locales/jp.yml
@@ -192,6 +192,20 @@ ui:
   ai_outputs: "出力"
   ai_no_outputs_yet: "出力がありません。処理を開始して文字起こしと要約を生成してください。"
   ai_select_file_for_outputs: "ファイルを選択して出力を表示。"
+  # AI ステップ名
+  ai_step_extract_audio: "音声抽出"
+  ai_step_compress_audio: "音声圧縮"
+  ai_step_chunk_audio: "音声分割"
+  ai_step_transcribe: "文字起こし"
+  ai_step_merge: "チャンク結合"
+  ai_step_summarize: "要約生成"
+  # AI ステップ詳細
+  ai_detail_already_audio: "音声ファイル"
+  ai_detail_audio_ready: "音声準備完了"
+  ai_detail_file_small_enough: "ファイルサイズOK"
+  ai_detail_transcription_complete: "文字起こし完了"
+  ai_detail_no_chunks_to_merge: "結合不要"
+  ai_detail_summary_generated: "要約完了"
 
 # サーバーメッセージ
 server:
