--- a/internal/core/i18n/locales/kr.yml
+++ b/internal/core/i18n/locales/kr.yml
@@ -192,6 +192,8 @@ ui:
   ai_outputs: "출력"
   ai_no_outputs_yet: "출력이 없습니다. 처리를 시작하여 전사 및 요약을 생성하세요."
   ai_select_file_for_outputs: "파일을 선택하여 출력을 확인하세요."
+  ai_language: "언어"
+  ai_select_language: "언어 선택"
   # AI 단계 이름
   ai_step_extract_audio: "오디오 추출"
   ai_step_compress_audio: "오디오 압축"
