feat(auth): add error handling for unreachable auth server with localized messages

--- a/internal/core/i18n/locales/de.yml
+++ b/internal/core/i18n/locales/de.yml
@@ -239,3 +239,4 @@ ai_cli:
   invalid_email: "Ungültiges E-Mail-Format."
   auth_failed: "Authentifizierung fehlgeschlagen:"
   email_required: "E-Mail ist erforderlich."
+  auth_server_down: "Verbindung zum Authentifizierungsserver nicht möglich. Überprüfen Sie Ihr Netzwerk."
