--- a/internal/core/i18n/locales/kr.yml
+++ b/internal/core/i18n/locales/kr.yml
@@ -239,3 +239,4 @@ ai_cli:
   invalid_email: "이메일 형식이 올바르지 않습니다."
   auth_failed: "인증 실패:"
   email_required: "이메일을 입력하세요."
+  auth_server_down: "인증 서버에 연결할 수 없습니다. 네트워크를 확인하세요."
