feat(i18n): update AI processing language options and remove translation step

--- a/internal/core/i18n/locales/de.yml
+++ b/internal/core/i18n/locales/de.yml
@@ -192,19 +192,15 @@ ui:
   ai_outputs: "Ausgaben"
   ai_no_outputs_yet: "Noch keine Ausgaben. Verarbeitung starten, um Transkript und Zusammenfassung zu erstellen."
   ai_select_file_for_outputs: "Datei auswählen, um Ausgaben anzuzeigen."
-  ai_language: "Sprache"
-  ai_select_language: "Sprache auswählen"
+  ai_audio_language: "Audio-Sprache"
+  ai_summary_language: "Zusammenfassungs-Sprache"
   ai_output_format: "Ausgabeformat"
-  ai_translate_to: "Übersetzen nach"
-  ai_no_translation: "Keine Übersetzung"
-  ai_translation_requires_account: "Übersetzung erfordert ein KI-Konto"
   # AI-Schrittnamen
   ai_step_extract_audio: "Audio extrahieren"
   ai_step_compress_audio: "Audio komprimieren"
   ai_step_chunk_audio: "Audio aufteilen"
   ai_step_transcribe: "Transkribieren"
   ai_step_merge: "Chunks zusammenführen"
-  ai_step_translate: "Übersetzen"
   ai_step_summarize: "Zusammenfassung erstellen"
   # AI-Schrittdetails
   ai_detail_already_audio: "Bereits Audio"
