--- a/internal/core/i18n/locales/es.yml
+++ b/internal/core/i18n/locales/es.yml
@@ -192,19 +192,15 @@ ui:
   ai_outputs: "Resultados"
   ai_no_outputs_yet: "Sin resultados aún. Inicia el procesamiento para generar transcripción y resumen."
   ai_select_file_for_outputs: "Selecciona un archivo para ver los resultados."
-  ai_language: "Idioma"
-  ai_select_language: "Seleccionar idioma"
+  ai_audio_language: "Idioma del audio"
+  ai_summary_language: "Idioma del resumen"
   ai_output_format: "Formato de salida"
-  ai_translate_to: "Traducir a"
-  ai_no_translation: "Sin traducción"
-  ai_translation_requires_account: "La traducción requiere una cuenta de IA"
   # Nombres de pasos AI
   ai_step_extract_audio: "Extraer audio"
   ai_step_compress_audio: "Comprimir audio"
   ai_step_chunk_audio: "Dividir audio"
   ai_step_transcribe: "Transcribir"
   ai_step_merge: "Combinar fragmentos"
-  ai_step_translate: "Traducir"
   ai_step_summarize: "Generar resumen"
   # Detalles de pasos AI
   ai_detail_already_audio: "Ya es audio"
