--- a/internal/core/i18n/locales/fr.yml
+++ b/internal/core/i18n/locales/fr.yml
@@ -192,19 +192,15 @@ ui:
   ai_outputs: "Résultats"
   ai_no_outputs_yet: "Aucun résultat. Lancez le traitement pour générer la transcription et le résumé."
   ai_select_file_for_outputs: "Sélectionnez un fichier pour voir les résultats."
-  ai_language: "Langue"
-  ai_select_language: "Sélectionner la langue"
+  ai_audio_language: "Langue de l'audio"
+  ai_summary_language: "Langue du résumé"
   ai_output_format: "Format de sortie"
-  ai_translate_to: "Traduire en"
-  ai_no_translation: "Pas de traduction"
-  ai_translation_requires_account: "La traduction nécessite un compte IA"
   # Noms des étapes AI
   ai_step_extract_audio: "Extraire l'audio"
   ai_step_compress_audio: "Compresser l'audio"
   ai_step_chunk_audio: "Découper l'audio"
   ai_step_transcribe: "Transcrire"
   ai_step_merge: "Fusionner les segments"
-  ai_step_translate: "Traduire"
   ai_step_summarize: "Générer le résumé"
   # Détails des étapes AI
   ai_detail_already_audio: "Déjà audio"
