--- a/internal/core/i18n/locales/jp.yml
+++ b/internal/core/i18n/locales/jp.yml
@@ -192,19 +192,15 @@ ui:
   ai_outputs: "出力"
   ai_no_outputs_yet: "出力がありません。処理を開始して文字起こしと要約を生成してください。"
   ai_select_file_for_outputs: "ファイルを選択して出力を表示。"
-  ai_language: "言語"
-  ai_select_language: "言語を選択"
+  ai_audio_language: "音声の言語"
+  ai_summary_language: "要約の言語"
   ai_output_format: "出力形式"
-  ai_translate_to: "翻訳先"
-  ai_no_translation: "翻訳なし"
-  ai_translation_requires_account: "翻訳にはAIアカウントが必要です"
   # AI ステップ名
   ai_step_extract_audio: "音声抽出"
   ai_step_compress_audio: "音声圧縮"
   ai_step_chunk_audio: "音声分割"
   ai_step_transcribe: "文字起こし"
   ai_step_merge: "チャンク結合"
-  ai_step_translate: "翻訳"
   ai_step_summarize: "要約生成"
   # AI ステップ詳細
   ai_detail_already_audio: "音声ファイル"
