--- a/internal/core/i18n/locales/kr.yml
+++ b/internal/core/i18n/locales/kr.yml
@@ -192,19 +192,15 @@ ui:
   ai_outputs: "출력"
   ai_no_outputs_yet: "출력이 없습니다. 처리를 시작하여 전사 및 요약을 생성하세요."
   ai_select_file_for_outputs: "파일을 선택하여 출력을 확인하세요."
-  ai_language: "언어"
-  ai_select_language: "언어 선택"
+  ai_audio_language: "오디오 언어"
+  ai_summary_language: "요약 언어"
   ai_output_format: "출력 형식"
-  ai_translate_to: "번역 대상"
-  ai_no_translation: "번역 안 함"
-  ai_translation_requires_account: "번역에는 AI 계정이 필요합니다"
   # AI 단계 이름
   ai_step_extract_audio: "오디오 추출"
   ai_step_compress_audio: "오디오 압축"
   ai_step_chunk_audio: "오디오 분할"
   ai_step_transcribe: "전사"
   ai_step_merge: "청크 병합"
-  ai_step_translate: "번역"
   ai_step_summarize: "요약 생성"
   # AI 단계 상세
   ai_detail_already_audio: "이미 오디오"
