--- a/internal/core/i18n/locales/zh.yml
+++ b/internal/core/i18n/locales/zh.yml
@@ -204,19 +204,15 @@ ui:
   ai_outputs: "输出结果"
   ai_no_outputs_yet: "暂无输出。开始处理以生成转录和摘要。"
   ai_select_file_for_outputs: "选择文件以查看输出。"
-  ai_language: "语言"
-  ai_select_language: "选择语言"
+  ai_audio_language: "音频语言"
+  ai_summary_language: "摘要语言"
   ai_output_format: "输出格式"
-  ai_translate_to: "翻译为"
-  ai_no_translation: "不翻译"
-  ai_translation_requires_account: "翻译需要配置 AI 账户"
   # AI 步骤名称
   ai_step_extract_audio: "提取音频"
   ai_step_compress_audio: "压缩音频"
   ai_step_chunk_audio: "分割音频"
   ai_step_transcribe: "转录"
   ai_step_merge: "合并转录"
-  ai_step_translate: "翻译"
   ai_step_summarize: "生成摘要"
   # AI 步骤详情
   ai_detail_already_audio: "已是音频"
